<dev>:<connect part of the fund manager data>

--- a/src/components/FundManager/FundManagerInfo.css
+++ b/src/components/FundManager/FundManagerInfo.css
@@ -34,7 +34,7 @@ button {
   background-color: #f6f6f6;
   display: inline-block; }
 
-.managerInfo {
+.managerInfo_body {
   padding-left: 23px;
   width: 250px;
   display: inline-block;
