--- a/src/components/FundManager/FundManagerInfo.scss
+++ b/src/components/FundManager/FundManagerInfo.scss
@@ -22,7 +22,7 @@
   display: inline-block;
 }
 
-.managerInfo {
+.managerInfo_body {
   padding-left: 23px;
   width: 250px;
   display: inline-block;
