<dev>:<add manager network chart>

--- a/src/components/FundManager/ManagerCharts.scss
+++ b/src/components/FundManager/ManagerCharts.scss
@@ -65,7 +65,7 @@
 }
 
 .networkChart {
-  height: 500px;
+  //height: 500px;
   margin-top: 15px;
   background-color: $card-background;
   padding: 20px;
