--- a/src/components/FundList/FundListTable.css
+++ b/src/components/FundList/FundListTable.css
@@ -23,4 +23,7 @@ button {
   display: table;
   margin: 0 auto; }
 
+.operation img {
+  cursor: pointer; }
+
 /*# sourceMappingURL=FundListTable.css.map */
