--- a/src/components/FundCompany/CompanyBrief.css
+++ b/src/components/FundCompany/CompanyBrief.css
@@ -27,7 +27,7 @@ button {
 
 .section_a {
   width: 473px;
-  height: 316px;
+  height: auto;
   display: inline-block;
   margin-right: 14px;
   margin-bottom: 15px;
@@ -37,7 +37,7 @@ button {
 
 .section_b {
   width: 473px;
-  height: 316px;
+  height: auto;
   display: inline-block;
   margin-bottom: 15px;
   vertical-align: top;
@@ -46,10 +46,21 @@ button {
 
 .section_c {
   width: 100%;
-  height: 468px;
+  height: auto;
   margin-bottom: 15px;
   padding: 20px;
   vertical-align: top;
   background-color: rgba(255, 255, 255, 0.95); }
+
+.section {
+  display: inline-block;
+  width: 50%;
+  padding: 0 20px;
+  font-size: 0; }
+  .section .section_title {
+    margin-bottom: 10px;
+    color: #9FAEC0;
+    font-size: 12px;
+    font-weight: 200; }
 
 /*# sourceMappingURL=CompanyBrief.css.map */
