--- a/src/components/FundCompany/CompanyBrief.scss
+++ b/src/components/FundCompany/CompanyBrief.scss
@@ -17,7 +17,7 @@
 
 .section_a {
   width: 473px;
-  height: 316px;
+  height: auto;
   display: inline-block;
   margin-right: 14px;
   margin-bottom: 15px;
@@ -28,7 +28,7 @@
 
 .section_b {
   width: 473px;
-  height: 316px;
+  height: auto;
   display: inline-block;
   margin-bottom: 15px;
   vertical-align: top;
@@ -38,9 +38,22 @@
 
 .section_c {
   width: 100%;
-  height: 468px;
+  height: auto;
   margin-bottom: 15px;
   padding: 20px;
   vertical-align: top;
   background-color: $card-background;
+}
+
+.section {
+  display: inline-block;
+  width: 50%;
+  padding: 0 20px;
+  font-size: 0;
+  .section_title {
+    margin-bottom: 10px;
+    color: $blue-grey-color;
+    font-size: 12px;
+    font-weight: 200;
+  }
 }
