<dev>:<update asset style>

--- a/src/components/Asset/AssetAllocation.css
+++ b/src/components/Asset/AssetAllocation.css
@@ -1,6 +1,13 @@
+.steps_content {
+  min-height: 400px;
+}
+.custom_option :global .ant-input-number {
+  width: 60px;
+}
 .routeSelect :global .ant-radio-button-wrapper {
+  margin: 0 80px;
   text-align: center;
-  width: 150px;
+  width: 160px;
   height: 140px;
   padding: 6px;
   border-width: 1px;
@@ -11,8 +18,14 @@
 .routeSelect :global .ant-radio-button-wrapper:last-child {
   border-radius: 0;
 }
-:global .ant-steps .ant-steps-head {
-  background: transparent;
+.steps :global .ant-steps-head {
+  background-color: #F9FAFB;
+}
+.steps :global .ant-steps-item.ant-steps-status-wait .ant-steps-head-inner {
+  background-color: #F9FAFB;
+}
+.steps :global .ant-steps-title {
+  background-color: #F9FAFB;
 }
 .decentralization :global .ant-radio-button-wrapper {
   font-size: 10px;
@@ -30,36 +43,48 @@
   border-radius: 0;
 }
 .stepTitle {
+  margin: 50px 0;
   font-size: 1.3em;
   font-weight: bold;
-  margin-bottom: 15px;
 }
 .selectWeight :global .ant-radio-wrapper {
   display: block;
+  font-size: 14px;
 }
 .selectWeight :global .ant-radio-group {
-  margin: 8px 20px;
+  margin: 10px 0;
+}
+.strategyClassify :global .ant-checkbox-group {
+  margin: 10px 0;
+}
+.strategyClassify :global .ant-checkbox-wrapper {
+  font-size: 14px;
+}
+.weight_left,
+.weight_right {
+  display: inline-block;
+  vertical-align: top;
+}
+.weight_left {
+  width: 600px;
+}
+.weight_right {
+  width: 300px;
+}
+.section {
+  margin-bottom: 40px;
+  font-size: 14px;
 }
 .classifyLabel {
-  border: 0 solid #81B6F5;
-  border-left-width: 2px;
-  padding-left: 4px;
+  display: block;
+  color: #9FAEC0;
+  font-size: 12px;
 }
 .fundListTitle {
   text-align: center;
   font-size: 1.1em;
   font-weight: bold;
   margin-bottom: 10px;
-}
-.fundListTitle > span {
-  border: 0 solid #8DC6FF;
-  border-bottom-width: 2px;
-  padding-bottom: 2px;
-}
-.strategyClassify :global .ant-checkbox-group {
-  margin-left: 20px;
-  margin-bottom: 20px;
-  margin-top: 10px;
 }
 .contentRetract {
   margin-left: 15px;
