<dev>:<update combination report>

--- a/src/components/Util/DivHeader.scss
+++ b/src/components/Util/DivHeader.scss
@@ -5,6 +5,7 @@
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 300 ;
+  text-align: left;
   color: $main-font-color;
   border-left: solid 2px $button-background;
   padding-left: 10px;
