--- a/src/components/Combination/CombinationReport.css
+++ b/src/components/Combination/CombinationReport.css
@@ -41,7 +41,7 @@ button {
 
 .section_1 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left; }
   .section_1 .left {
     display: inline-block;
@@ -55,7 +55,7 @@ button {
 
 .section_2 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left; }
   .section_2 p {
     padding-left: 12px;
@@ -64,7 +64,7 @@ button {
 
 .section_3 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left; }
   .section_3 table {
     width: 100%;
@@ -79,53 +79,82 @@ button {
 
 .section_4 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left; }
   .section_4 table {
     width: 100%;
     font-size: 14px; }
-    .section_4 table tr td:first-child {
-      text-align: right;
-      color: #3D5673; }
-    .section_4 table tr td:last-child {
-      padding-left: 30px;
-      text-align: left;
-      color: #9FAEC0; }
+    .section_4 table tr {
+      height: 30px; }
+      .section_4 table tr td:first-child {
+        text-align: right;
+        color: #3D5673; }
+      .section_4 table tr td:last-child {
+        padding-left: 30px;
+        text-align: left;
+        color: #9FAEC0; }
 
 .section_5 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   padding-left: 12px;
   text-align: left; }
 
 .section_6 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   padding-left: 12px;
   text-align: left; }
   .section_6 .chart {
     display: inline-block;
-    width: 455px;
-    margin-right: 37px; }
+    width: 500px;
+    margin-right: 30px; }
   .section_6 .table {
     display: inline-block;
     vertical-align: top;
-    width: 356px; }
+    width: 300px; }
     .section_6 .table table {
       width: 100%;
       font-size: 12px; }
-      .section_6 .table table tr td:first-child {
-        text-align: right;
-        color: #3D5673; }
-      .section_6 .table table tr td:last-child {
-        padding-left: 30px;
-        text-align: left;
-        color: #9FAEC0; }
+      .section_6 .table table tr {
+        height: 30px; }
+        .section_6 .table table tr th:first-child {
+          padding-bottom: 10px;
+          text-align: right;
+          font-weight: 400;
+          color: #9FAEC0; }
+        .section_6 .table table tr th:last-child {
+          padding-bottom: 10px;
+          padding-left: 50px;
+          text-align: left;
+          font-weight: 400;
+          color: #9FAEC0; }
+        .section_6 .table table tr td:first-child {
+          text-align: right;
+          font-size: 14px;
+          color: #3D5673; }
+        .section_6 .table table tr td:last-child {
+          padding-left: 50px;
+          text-align: left;
+          font-size: 14px;
+          color: #9FAEC0; }
 
-.section_7 {
+.section_7, .section_8, .section_9 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   padding-left: 12px;
   text-align: left; }
+
+.section {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%;
+  padding: 0 20px;
+  font-size: 0; }
+  .section .section_title {
+    margin-bottom: 10px;
+    color: #9FAEC0;
+    font-size: 12px;
+    font-weight: 200; }
 
 /*# sourceMappingURL=CombinationReport.css.map */
