--- a/src/components/Combination/CombinationReport.scss
+++ b/src/components/Combination/CombinationReport.scss
@@ -34,7 +34,7 @@
 
 .section_1 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left;
 
   .left {
@@ -53,7 +53,7 @@
 
 .section_2 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left;
 
   p {
@@ -65,7 +65,7 @@
 
 .section_3 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left;
 
   table {
@@ -85,7 +85,7 @@
 
 .section_4 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   text-align: left;
 
   table {
@@ -93,6 +93,7 @@
     font-size: 14px;
 
     tr {
+      height: 30px;
       td:first-child {
         text-align: right;
         color: $main-font-color;
@@ -118,41 +119,59 @@
 
 .section_5 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   padding-left: 12px;
   text-align: left;
 }
 
 .section_6 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   padding-left: 12px;
   text-align: left;
 
   .chart {
     display: inline-block;
-    width: 455px;
-    margin-right: 37px;
+    width: 500px;
+    margin-right: 30px;
   }
 
   .table {
     display: inline-block;
     vertical-align: top;
-    width: 356px;
+    width: 300px;
 
     table {
       width: 100%;
       font-size: 12px;
 
       tr {
+        height: 30px;
+        th:first-child {
+          padding-bottom: 10px;
+          text-align: right;
+          font-weight: 400;
+          color: $blue-grey-color;
+        }
+
+        th:last-child {
+          padding-bottom: 10px;
+          padding-left: 50px;
+          text-align: left;
+          font-weight: 400;
+          color: $blue-grey-color;
+        }
+
         td:first-child {
           text-align: right;
+          font-size: 14px;
           color: $main-font-color;
         }
 
         td:last-child {
-          padding-left: 30px;
+          padding-left: 50px;
           text-align: left;
+          font-size: 14px;
           color: $blue-grey-color;
         }
       }
@@ -161,9 +180,24 @@
 
 }
 
-.section_7 {
+.section_7, .section_8, .section_9 {
   width: 100%;
-  padding-top: 24px;
+  padding-top: 40px;
   padding-left: 12px;
   text-align: left;
+}
+
+.section {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%;
+  padding: 0 20px;
+  font-size: 0;
+
+  .section_title {
+    margin-bottom: 10px;
+    color: $blue-grey-color;
+    font-size: 12px;
+    font-weight: 200;
+  }
 }
