--- a/src/components/Util/DivHeader.css
+++ b/src/components/Util/DivHeader.css
@@ -20,6 +20,7 @@ button {
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: 300;
+  text-align: left;
   color: #3D5673;
   border-left: solid 2px #8DC6FF;
   padding-left: 10px; }
