<dev>:<complete combination report>

--- a/src/components/Combination/CombinationReport.scss
+++ b/src/components/Combination/CombinationReport.scss
@@ -180,7 +180,7 @@
 
 }
 
-.section_7, .section_8, .section_9 {
+.section_7, .section_8, .section_9, .section_10 {
   width: 100%;
   padding-top: 40px;
   padding-left: 12px;
