--- a/src/components/Combination/CombinationReport.css
+++ b/src/components/Combination/CombinationReport.css
@@ -139,7 +139,7 @@ button {
           font-size: 14px;
           color: #9FAEC0; }
 
-.section_7, .section_8, .section_9 {
+.section_7, .section_8, .section_9, .section_10 {
   width: 100%;
   padding-top: 40px;
   padding-left: 12px;
