--- a/src/components/Asset/AssetAllocation.less
+++ b/src/components/Asset/AssetAllocation.less
@@ -17,7 +17,7 @@
 
     }
     .ant-radio-button-wrapper {
-      margin: 0 80px;
+      margin: 0 150px;
       text-align: center;
       width: 160px;
       height: 140px;
@@ -76,6 +76,15 @@
   font-size: 1.3em;
   font-weight: bold;
   //margin-bottom: 15px;
+}
+.earnRiskTargetStyle {
+  :global {
+    .ant-slider-step {
+      .ant-slider-dot:last-child {
+        display: none;
+      }
+    }
+  }
 }
 
 .selectWeight {
