--- a/src/components/FundInfo/FundCharts.scss
+++ b/src/components/FundInfo/FundCharts.scss
@@ -24,3 +24,10 @@
 .pie_chart {
   text-align: center;
 }
+
+.previousFundManagerDiv {
+  height: 263px;
+  margin-top: 15px;
+  background-color: $card-background;
+  padding: 20px;
+}
