--- a/src/components/FundManager/ManagerCharts.css
+++ b/src/components/FundManager/ManagerCharts.css
@@ -38,6 +38,7 @@ button {
   vertical-align: top; }
 
 .fundYieldTrend {
+  padding: 20px;
   height: auto;
   margin-top: 15px;
   background-color: rgba(255, 255, 255, 0.95); }
