--- a/src/components/FundManager/FundManagerInfo.scss
+++ b/src/components/FundManager/FundManagerInfo.scss
@@ -11,14 +11,14 @@
   display: inline-block;
   background-color: $card-background;
   margin-right: 15px;
-  padding: 12.5px;
+  padding: 12.5px 20px;
   vertical-align: top;
 }
 
 .managerPhoto {
-  width: 120px;
-  height: 125px;
-  background-color: $grey-light;
+  width: auto;
+  height: auto;
+  //background-color: $grey-light;
   display: inline-block;
 }
 
