<fix>:<attribution sort>

--- a/src/components/Asset/AssetAllocation.less
+++ b/src/components/Asset/AssetAllocation.less
@@ -158,8 +158,7 @@
 .fund_list {
   display: inline-block;
   width: 31%;
-  height: 360px;
-  margin: 0 1%;
+  margin: 0 1% 30px;
 
   .fund_item {
     font-size: 14px;
