--- a/src/components/Asset/AssetAllocation.less
+++ b/src/components/Asset/AssetAllocation.less
@@ -181,3 +181,23 @@
     }
   }
 }
+
+.scroll_wrapper {
+  height: 300px;
+  border: 1px solid #E7E9EC;
+  :global {
+    .FreeScrollbar {
+      overflow: scroll !important;
+    }
+  }
+}
+
+.scroll_wrapper_small {
+  height: 100px;
+  border: 1px solid #E7E9EC;
+  :global {
+    .FreeScrollbar {
+      overflow: scroll !important;
+    }
+  }
+}
