<fix>:<fix the data style of fund performance index>

--- a/src/components/FundAnalysis/FundAnalysisCharts.css
+++ b/src/components/FundAnalysis/FundAnalysisCharts.css
@@ -18,6 +18,9 @@ button {
 
 .fund_analysis_chart :global .card {
   margin-bottom: 15px; }
+  .fund_analysis_chart :global .card p span {
+    font-weight: 500;
+    color: #81B6F5; }
 
 .section {
   display: inline-block;
