--- a/src/components/Asset/AssetAllocation.less
+++ b/src/components/Asset/AssetAllocation.less
@@ -39,6 +39,12 @@
     .ant-steps-head {
       background-color: #F9FAFB;
     }
+    .ant-steps-item.ant-steps-status-finish .ant-steps-head-inner {
+      background-color: #F9FAFB;
+    }
+    .ant-steps-head-inner {
+      background-color: #F9FAFB;
+    }
     .ant-steps-item.ant-steps-status-wait .ant-steps-head-inner {
       background-color: #F9FAFB;
     }
