<fix>:<optimize the combination report charts>

--- a/src/components/Combination/CombinationReport.css
+++ b/src/components/Combination/CombinationReport.css
@@ -102,6 +102,8 @@ button {
   padding-top: 40px;
   padding-left: 12px;
   text-align: left; }
+  .section_5 .table {
+    padding-top: 25px; }
 
 .section_6 {
   width: 100%;
