--- a/src/components/Layout/Navigator.scss
+++ b/src/components/Layout/Navigator.scss
@@ -14,6 +14,7 @@
   width: 100%;
   height: auto;
   display: inline-block;
+
 }
 
 #loginButton {
@@ -41,6 +42,22 @@
 
 .labelDiv {
   display: inline-block;
+
+  h1 {
+    color: $sub-font-color;
+    font-weight: 400;
+    font-size: 36px;
+    letter-spacing: 2px;
+    line-height: 36px;
+  }
+
+  h2 {
+    color: $sub-font-color;
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 1px;
+    opacity: 0.7;
+  }
 }
 
 .menuDiv {
