--- a/src/components/Combination/CombinationReport.scss
+++ b/src/components/Combination/CombinationReport.scss
@@ -155,7 +155,7 @@
 .section_5 {
   width: 100%;
   padding-top: 40px;
-  padding-left: 12px;
+  //padding-left: 12px;
   text-align: left;
 
   .table {
