<dev>:<add loading state / modify the opacity of the scatter chart>

--- a/src/components/CombinationModal/CombinationModal.css
+++ b/src/components/CombinationModal/CombinationModal.css
@@ -48,7 +48,7 @@ button {
   background-color: #fff;
   overflow: scroll; }
 
-.button {
+.button, .mySpin {
   float: right;
   font-weight: 400;
   margin-top: 10px;
